tweaked naming of landing page for routes

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,4 @@
 {
-    "python.pythonPath": "/Users/ruthmayodi/Kenzie_Assesments/kenzieconnect/.venv/bin/python3",
+    "python.pythonPath": "/home/knegley/.pyenv/versions/3.9.0/bin/python",
     "git.ignoreLimitWarning": true
 }
