--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ django-cors-headers = "^3.5.0"
 djangorestframework = "^3.12.1"
 
 [tool.poetry.dev-dependencies]
+flake8 = "^3.8.4"
 
 [build-system]
 requires = ["poetry>=0.12"]
