created a one to one relationship with the user and survey and got it to display on django rest framework, also fixed spelling error for serializer for the penpal serializer

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,9 @@
 {
-    "python.pythonPath": "/usr/bin/python3",
+    "python.pythonPath": "/home/knegley/.pyenv/shims/python",
     "git.ignoreLimitWarning": true,
     "python.linting.flake8Enabled": true,
-    "python.linting.enabled": true
+    "python.linting.enabled": true,
+    "python.languageServer": "Pylance",
+    "python.linting.pylintEnabled": false,
+    "python.formatting.provider": "autopep8"
 }
