--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ djangorestframework = "^3.12.1"
 
 [tool.poetry.dev-dependencies]
 flake8 = "^3.8.4"
+autopep8 = "^1.5.4"
 
 [build-system]
 requires = ["poetry>=0.12"]
