--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,5 +5,6 @@
     "python.linting.enabled": true,
     "python.languageServer": "Pylance",
     "python.linting.pylintEnabled": false,
-    "python.formatting.provider": "autopep8"
+    "python.formatting.provider": "autopep8",
+    "python.linting.mypyEnabled": false
 }
