--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,8 @@ django = "^3.1.2"
 django-rest = "^0.8.6"
 django-cors-headers = "^3.5.0"
 djangorestframework = "^3.12.1"
+django-allauth = "^0.42.0"
+django-rest-auth = "^0.9.5"
 
 [build-system]
 requires = ["poetry>=0.12"]
