--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ django = "^3.1.2"
 django-rest = "^0.8.6"
 django-cors-headers = "^3.5.0"
 djangorestframework = "^3.12.1"
+django-dotenv = "^1.4.2"
 
 [tool.poetry.dev-dependencies]
 flake8 = "^3.8.4"
