got receiving and posting messages to work, now need to add post messages to penpal page and then test out website

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,5 @@
 {
-    "python.pythonPath": "/home/knegley/.pyenv/shims/python",
+    "python.pythonPath": "/home/knegley/.pyenv/versions/3.9.0/bin/python",
     "git.ignoreLimitWarning": true,
     "python.linting.flake8Enabled": true,
     "python.linting.enabled": true,
